ajout des path()

--- a/templates/ad/index.html.twig
+++ b/templates/ad/index.html.twig
@@ -11,19 +11,23 @@
             <div class="card bg-light mb-3">
                 <div class="card-header text-center">
                     {{ ad.rooms }} chambre(s)<strong> {{ ad.price }} &euro; / nuit</strong><br>
-                    <small>Pas encore noté</small>
+                        <small>Pas encore noté</small>
                 </div>
-
-                <img src="{{ ad.coverImage }}" alt="Image de l'appartement" style="height: 200px; width: 100%; display:block">
-
+                <a href="{{ path('ads_show', {'slug': ad.slug})}}">
+                    <img src="{{ ad.coverImage }}" alt="Image de l'appartement" 
+                        style="height: 200px; width: 100%; display:block">
+                </a>
                 <div class="card-body">
                     <h4 class="card-title">
-                        {{ ad.title }}
+                        <a href="{{ path('ads_show', {'slug': ad.slug})}}">
+                            {{ ad.title }}
+                        </a>
                     </h4>
                     <p class="card-text">
                         {{ ad.introduction }}
                     </p>
-                    <a href="{{ path('ads_index') }}/{{ ad.slug }}" class="btn btn-secondary">Plus d'info</a>
+                    <a href="{{ path('ads_show', {'slug': ad.slug})}}" 
+                        class="btn btn-secondary">Plus d'info</a>
                 </div>
             </div>
         </div>   
