--- a/templates/ad/show.html.twig
+++ b/templates/ad/show.html.twig
@@ -20,7 +20,34 @@
 <div class="container">
     <div class="row">
         <div class="col-md-8 mb-3">
-            {{ ad.content }}
+            {{ ad.content|raw }}
+            <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+                <ol class="carousel-indicators">
+                    {% for image in ad.images %}
+                        <li data-target="#carouselExampleIndicators" 
+                        data-slide-to="{{ loop.index0 }}" class="{% if loop.first %}active{% endif %}"></li>
+                    {% endfor %}
+                </ol>
+                <div class="carousel-inner">
+                    {% for image in ad.images %}
+                        <div class="carousel-item {% if loop.first %}active{% endif %}">
+                            <img class="d-block w-100" src="{{ image.url }}" alt="{{ image.caption }} slide">
+                            <div class="carousel-caption d-none d-md-block">
+                                <h5>{{ ad.title }}</h5>
+                                <p>{{ image.caption }}</p>
+                            </div>
+                        </div>
+                    {% endfor %}
+                </div>
+                <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="sr-only">Previous</span>
+                </a>
+                <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="sr-only">Next</span>
+                </a>
+            </div>
         </div>
         <div class="col">
             <div class="row">
@@ -28,7 +55,7 @@
                     <img src="http://placehold.it/64x64" alt="Avatar">
                 </div>
                 <div class="col">
-                    <h3>Joseph</h3>
+                    <h3>Joseph Glandul</h3>
                     <span class="badge badge-warning"> 3 annonce </span> 
                 </div>           
             </div>
