--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -3,7 +3,8 @@
     <head>
         <meta charset="UTF-8">
         <title>{% block title %}{% endblock %} M.A.M.</title>
-        <link rel="stylesheet" href="/css/bootstrap.min.css"
+        <link rel="stylesheet" href="/css/bootstrap.min.css">
+        <link rel="stylesheet" href="/css/app.css">
         {% block stylesheets %}{% endblock %}
     </head>
     <body>
@@ -19,8 +20,11 @@
 
             <div class="collapse navbar-collapse" id="navbarColor03">
                 <ul class="navbar-nav mr-auto">
-                    <li class="nav-item active">
+                    <li class="nav-item">
                         <a class="nav-link" href="{{ path('homepage') }}">Accueil</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{{ path('ads_index') }}">Les annonces</a>
                     </li>
                 </ul>
                 <ul class="navbar-nav ml-auto">
