--- a/templates/ad/new.html.twig
+++ b/templates/ad/new.html.twig
@@ -2,7 +2,7 @@
 
 {% block title %}Création d'une annonce {% endblock %}
 
-{# {% form_theme form _self %} #}
+{% form_theme form _self %}
 
 {% block body %}
     <div class="container">
@@ -18,23 +18,61 @@
     </div>
 {% endblock %}
 
-{# {% block form_row %}
-    {{ dump() }} 
+{% block _ad_images_widget %}
+    <p>Ajoutez vos photos dans le formulaire ci-dessous </p>
+
+    {{ form_widget(form) }}
+
     <div class="form-group">
-        {{ form_label(form) }}
-        {{ form_widget(form) }}
+        <button type="button" id="add-image" class="btn btn-warning">Ajoutez une photo</button>
     </div>
-{% endblock %} #}
-
-
-{# {% block text_widget %}
-    <input type="text" name="{{ full_name }}" id="{{ id }}" class="form_control"
 {% endblock %}
 
-{% block url_widget %}
-    <input type="url" name="{{ full_name }}" id="{{ id }}" class="form_control"
+{% block _ad_images_entry_row %}
+    {{ form_widget(form) }}
 {% endblock %}
 
-{% block textarea_widget %}
-    <input type="textarea" name="{{ full_name }}" id="{{ id }}" class="form_control"
-{% endblock %} #}
+{% block _ad_images_entry_widget %}
+    <div class="form-group" id="block_{{ id }}">
+        <div class="row">
+            <div class="col-10">
+                <div class="row">
+                    <div class="col">
+                        {{ form_widget(form.url) }}
+                    </div>
+                    <div class="col">
+                        {{ form_widget(form.caption) }}
+                    </div>
+                </div>
+            </div>
+            <div class="col-2">
+                <button type="button" data-action="delete" data-target="#block_{{id}}" class="btn btn-small btn-danger">X</button>
+            </div>
+        </div>
+    </div>
+{% endblock %}
+
+{% block javascripts %}
+    <script>
+        $('#add-image').click(function(){
+            // Récupération du numéro du futur champ à créer
+            const index = $('#ad_images div.form-group').length;
+            // Récupération du prototype
+            const tmplt = $('#ad_images').data('prototype').replace(/__name__/g, index);
+
+            console.log(tmplt);
+            $('#ad_images').append(tmplt);
+
+            handleDeleteButton();
+        });
+
+        function handleDeleteButton() {
+            $('button[data-action="delete"]').click(function(){
+                const target = this.dataset.target;
+                $(target).remove();
+            });
+        }
+
+        handleDeleteButton();
+    </script>
+{% endblock %}
