--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -10,31 +10,11 @@
     <body>
         {% block header %}{% endblock %}
 
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <a class="navbar-brand" href="{{ path('homepage') }}">M.A.M.</a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" 
-                    data-target="#navbarColor03" aria-controls="navbarColor03" 
-                    aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
+        {% include 'partials/header.html.twig' %}
 
-            <div class="collapse navbar-collapse" id="navbarColor03">
-                <ul class="navbar-nav mr-auto">
-                    <li class="nav-item">
-                        <a class="nav-link" href="{{ path('homepage') }}">Accueil</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="{{ path('ads_index') }}">Les annonces</a>
-                    </li>
-                </ul>
-                <ul class="navbar-nav ml-auto">
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Mon Compte</a>
-                    </li>
-                </ul>
-            </div>
-        </nav>
         {% block body %}{% endblock %}
+
+        {% include 'partials/footer.html.twig' %}
 
                 <script src="/js/jquery.min.js">
                 </script>
