--- a/templates/ad/index.html.twig
+++ b/templates/ad/index.html.twig
@@ -7,33 +7,8 @@
     <h1 class="mt-3 mb-4">Nos annonces de locations chez nos membres</h1>
     <div class="row">
         {% for ad in ads %}
-            {% set url = path('ads_show', {'slug': ad.slug})%}
-                <div class="col-md-4">
-                    <div class="card bg-light mb-3">
-                        <div class="card-header text-center">
-                            {{ ad.rooms }} chambre(s)<strong> {{ ad.price }} &euro; / nuit</strong><br>
-                                <small>Pas encore noté</small>
-                        </div>
-                        <a href="{{ url }}">
-                            <img src="{{ ad.coverImage }}" alt="Image de l'appartement" 
-                                style="height: 250px; width: 100%; display:block; object-fit: cover">
-                        </a>
-                        <div class="card-body">
-                            <h4 class="card-title">
-                                <a href="{{ url }}">
-                                    {{ ad.title }}
-                                </a>
-                            </h4>
-                            <p class="card-text">
-                                {{ ad.introduction }}
-                            </p>
-                            <a href="{{ url }}" 
-                                class="btn btn-warning">Plus d'info</a>
-                        </div>
-                    </div>
-                </div>   
+            {% include 'ad/_ad.html.twig' %}
         {% endfor %}
     </div>
-
 </div>
 {% endblock %}
