mise en place du formulaire d'enregistrement

--- a/templates/ad/edit.html.twig
+++ b/templates/ad/edit.html.twig
@@ -6,7 +6,7 @@
 
 {% block body %}
     <div class="container">
-        <h1>Mofifiez votre annonce : {{ ad.title }}</h1>
+        <h1>Modifiez l'annonce : {{ ad.title }}</h1>
 
          {{ form_start(form) }}
 
