--- a/templates/partials/header.html.twig
+++ b/templates/partials/header.html.twig
@@ -16,9 +16,18 @@
             </li>
         </ul>
         <ul class="navbar-nav ml-auto">
+        {% if app.user %}
             <li class="nav-item">
-                <a class="nav-link" href="#">Mon Compte</a>
+                <a class="nav-link" href="{{ path('account_logout')}}">Deconnexion</a>
             </li>
+        {% else %}
+            <li class="nav-item">
+                <a class="nav-link" href="{{ path('account_register')}}">Enregistrement</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="{{ path('account_login')}}">Connexion</a>
+            </li>
+        {% endif %}
         </ul>
     </div>
 </nav>
