formulaire de modification des mots de passe

--- a/templates/home.html.twig
+++ b/templates/home.html.twig
@@ -10,11 +10,11 @@
 
 {% block body %}
 <div class="container">
-    <div class="jumbotron mt-4">
+    <div class="jumbotron mt-4 bg-light text-center">
         <h1 class="display-3">Bienvenue à la M.A.M. du Tremblay sur Mauldre</h1>
-        <p class="lead">Nous gardons vos enfants de 0 à 3ans du lundi au vendredi</p>
+        <p class="lead text-warning">Nous gardons vos enfants de 0 à 3ans du lundi au vendredi</p>
         <hr class="my-4">
-        <p>Où et à qui confier son enfant en bas âge quand les parents travaillent ?</p>
+        <p class="text-primary">Où et à qui confier son enfant en bas âge quand les parents travaillent ?</p>
         <p class="lead">
             <a class="btn btn-primary btn-lg" href="#" role="button">Plus d'info</a>
         </p>
