--- a/templates/partials/footer.html.twig
+++ b/templates/partials/footer.html.twig
@@ -1,3 +1,3 @@
-<footer class="mt-5 bg-light py-5 text-center">
+<footer class="mt-5 bg-light py-5 text-center footer">
     <p>&copy; 2018 GREG</p>
 </footer>
