Modification de l'acces aux annonce user

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -24,3 +24,14 @@ div.carousel-caption {
 p {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
+
+.avatar {
+    max-width: 128px;
+    max-height: 128px;
+    border-radius: 50%
+}
+
+.avatar-medium {
+    max-width: 64px;
+    max-height: 64px;
+}
