--- a/templates/ad/show.html.twig
+++ b/templates/ad/show.html.twig
@@ -50,18 +50,21 @@
             </div>
         </div>
         <div class="col">
+            {% set a = ad.author %}
             <div class="row">
-                <div class="col-4">
-                    <img src="http://placehold.it/64x64" alt="Avatar">
+                <div class="col-3">
+                    <a href="{{ path('user_show', {'slug': a.slug }) }}">
+                        <img src="{{ a.picture }}" class="avatar avatar-medium"alt="Avatar de {{ a.fullName }}">
+                    </a>
                 </div>
                 <div class="col">
-                    <h3>Joseph Glandul</h3>
-                    <span class="badge badge-warning"> 3 annonce </span> 
+                    <a href="{{ path('user_show', {'slug': a.slug }) }}">
+                        <h3>{{ a.fullName }}</h3>
+                    </a>
+                    <span class="badge badge-warning"> {{ a.ads | length }} annonce(s) </span> 
                 </div>           
             </div>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ducimus, id.</p>
-            <p>Dolorum aperiam, vel adipisci officiis culpa obcaecati dolores numquam doloremque.</p>
-            <p>Quam, expedita? Porro id vel fuga explicabo. Dolorem, id at!</p>
+            <p>{{ a.description | raw }}</p>
         </div>
     </div>
 </div>
