--- a/templates/partials/header.html.twig
+++ b/templates/partials/header.html.twig
@@ -17,8 +17,20 @@
         </ul>
         <ul class="navbar-nav ml-auto">
         {% if app.user %}
-            <li class="nav-item">
-                <a class="nav-link" href="{{ path('account_logout')}}">Deconnexion</a>
+            <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" id="accountDropdownLink" data-toggle="dropdown">
+                    <img src="{{ app.user.picture }}" class="avatar avatar-mini" alt="Avatar de {{ app.user.fullName }}">
+                    {{ app.user.fullName }}
+                </a>
+                <div class="dropdown-menu dropdown-menu-right" aria-labelledby="accountDropdownLink">
+                    <a href="{{ path('account_index') }}" class="dropdown-item">Mon compte</a>
+                    <a href="{{ path('ads_create') }}" class="dropdown-item">Ajoutez une annonce</a>
+                    <div class="dropdown-divider"></div>
+                    <a href="{{ path('account_profile') }}" class="dropdown-item">Modifiez profil</a>
+                    <a href="{{ path('account_password') }}" class="dropdown-item">Modifiez mot de passe</a>
+                    <div class="dropdown-divider"></div>
+                    <a href="{{ path('account_logout') }}" class="dropdown-item">Déconnexion</a>
+                </div>
             </li>
         {% else %}
             <li class="nav-item">
