--- a/templates/user/index.html.twig
+++ b/templates/user/index.html.twig
@@ -4,7 +4,7 @@
 
 {% block body %}
     <div class="container">       
-        <div class="row align-items-center">
+        <div class="row align-items-center mb-3">
             <div class="col-3 text-center">
                 <img src="{{ user.picture }}" class="avatar mb-3" alt="Avatar de {{ user.fullName }}">
                 <br>
@@ -12,11 +12,21 @@
             </div>
             <div class="col-9">
                 <h1>{{ user.fullName }}</h1>
+                {% if user is same as(app.user) %}
+                    <div class="mt-3">
+                        <a href="{{ path('account_profile')}}" class="btn btn-warning mr-2 mb-"> 
+                            Modifiez mon profil
+                        </a>
+                        <a href="{{ path('account_password')}}" class="btn btn-warning mr-2 mb-">
+                            Modifiez mon Mot de passe
+                        </a>
+                    </div>
+                {% endif %}
             </div>
         </div>
         {{ user.description | raw }}
         <hr>
-        <h2>les annonces de {{ user.fullName }}</h2>
+        <h2 class="mb-3">Les annonces de {{ user.fullName }}</h2>
 
         {% if user.ads | length > 0 %}
             <div class="row">
@@ -26,7 +36,7 @@
             </div>
         {% else %}
             <div class="alert alert-info">
-                <p><strong>{{ user.fullName }}</strong> n'a pas encore d'annonce</p>
+                <p><strong>{{ user.fullName }}</strong> n'a pas encore déposé d'annonce</p>
             </div>
         {% endif %}
     </div>
