Fonction delete ad ajoutée

--- a/templates/ad/_ad.html.twig
+++ b/templates/ad/_ad.html.twig
@@ -20,6 +20,12 @@
                 </p>
                 <a href="{{ url }}" 
                     class="btn btn-warning">Plus d'info</a>
+                {% if app.user and app.user == ad.author %}
+                    <a href="{{ path('ads_edit', {'slug': ad.slug}) }}" class="btn btn-warning">Modifiez</a>
+                {% else %}
+                    <a href="#" class="btn btn-warning">Réservez !</a>
+                {% endif %}
+
             </div>
         </div>
     </div>   
