--- a/templates/ad/_ad.html.twig
+++ b/templates/ad/_ad.html.twig
@@ -23,7 +23,7 @@
                 {% if app.user and app.user == ad.author %}
                     <a href="{{ path('ads_edit', {'slug': ad.slug}) }}" class="btn btn-warning">Modifiez</a>
                 {% else %}
-                    <a href="{{ path('booking_create', {'slug': ad.slug}) }}" class="btn btn-warning">Réservez !</a>
+                    <a href="{{ path('booking_create', {'slug': ad.slug}) }}" class="btn btn-warning">Réservez</a>
                 {% endif %}
 
             </div>
