ajout de datatransformer et dates non autorisées en js

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -40,3 +40,7 @@ p {
     max-width: 64px;
     max-height: 64px;
 }
+
+.datepicker table tr td.disabled, .datepicker table tr td.disabled:hover {
+    color: crimson !important;
+}
