--- a/templates/booking/book.html.twig
+++ b/templates/booking/book.html.twig
@@ -2,13 +2,16 @@
 
 {% block title %}Réservez {{ ad.title }} {% endblock %}
 
-{% block body %}
+{% block stylesheets %}
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.8.0/css/bootstrap-datepicker.min.css" />
+{% endblock %}
 
+{% block body %}
 <div class="container">
     <h1>Réservez l'annonce {{ ad.title }}</h1>
         <p>Vous allez réservez le bien de <strong>{{ ad.author.fullName }}</strong></p>
 
-         {{ form_start(form) }}
+        {{ form_start(form) }}
 
         <div class="alert alert-light">
             <h2>Indiquez vos dates de séjour ci dessous</h2>
@@ -38,4 +41,24 @@
         
         {{ form_end(form) }}
 </div>
+{% endblock %}
+
+{% block javascripts %}
+<script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.8.0/js/bootstrap-datepicker.min.js">
+</script>
+
+<script>
+    $(document).ready(function(){
+        $('#booking_startDate, #booking_endDate').datepicker({
+            format: 'dd/mm/yyyy',
+            datesDisabled: [
+                {% for day in ad.notAvailableDays %}
+                    "{{ day.format('d/m/Y') }}",
+                {% endfor %}
+            ],
+            startDate: new Date()
+        });
+    })
+</script>
+
 {% endblock %}
