affichage des réservations d'un utilisateur

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -2,6 +2,7 @@
 <html>
     <head>
         <meta charset="UTF-8">
+        <meta description="Site d'apprentissage de Symfony 4">
         <title>{% block title %}{% endblock %} M.A.M.</title>
         <link rel="stylesheet" href="/css/bootstrap.min.css">
         <link rel="stylesheet" href="/css/app.css">
@@ -15,7 +16,6 @@
         {% block body %}{% endblock %}
 
         {% include 'partials/footer.html.twig' %}
-
                 <script src="/js/jquery.min.js">
                 </script>
                 <script src="/js/popper.min.js">
