--- a/templates/booking/book.html.twig
+++ b/templates/booking/book.html.twig
@@ -8,7 +8,7 @@
 
 {% block body %}
 <div class="container">
-    <h1>Réservez l'annonce {{ ad.title }}</h1>
+    <h1>Réservez l'annonce : {{ ad.title }}</h1>
         <p>Vous allez réservez le bien de <strong>{{ ad.author.fullName }}</strong></p>
 
         {{ form_start(form) }}
@@ -27,15 +27,13 @@
 
                 </div>
             </div>
+            <h4>Montant du séjour : <span id="amount">...</span> &euro;</h4>
+            <p><span id="days">0</span> nuit(s) à {{ ad.price }} &euro; / nuit</p>
+            <h class="mt-4">Ajoutez un commentaire (optionnel)</h4>
+
+            {{ form_row(form.comment) }}
+
         </div>
-
-
-        <h4>Montant du séjour : <span id="amount">...</span> &euro;</h4>
-        <p><span id="days">0</span> nuit(s) à {{ ad.price }} &euro; / nuit</p>
-
-        <h2>Ajoutez un commentaire (optionnel)</h2>
-
-        {{ form_row(form.comment) }}
 
         <button type="submit" class="btn btn-warning">Validez</button>
         
@@ -48,8 +46,22 @@
 </script>
 
 <script>
+    $.fn.datepicker.dates['fr'] = {
+        days: ["dimanche", "lundi", "mardi", "mercredi", "jeudi", "vendredi", "samedi"],
+        daysShort: ["dim.", "lun.", "mar.", "mer.", "jeu.", "ven.", "sam."],
+        daysMin: ["di", "lu", "ma", "me", "je", "ve", "sa"],
+        months: ["janvier", "février", "mars", "avril", "mai", "juin", "juillet", "août", "septembre", "octobre", "novembre", "décembre"],
+        monthsShort: ["janv.", "févr.", "mars", "avril", "mai", "juin", "juil.", "août", "sept.", "oct.", "nov.", "déc."],
+        today: "Aujourd'hui",
+        monthsTitle: "Mois",
+        clear: "Effacer",
+        weekStart: 1,
+        format: "dd/mm/yyyy"
+    };
     $(document).ready(function(){
+
         $('#booking_startDate, #booking_endDate').datepicker({
+            language: 'fr',
             format: 'dd/mm/yyyy',
             datesDisabled: [
                 {% for day in ad.notAvailableDays %}
@@ -58,7 +70,29 @@
             ],
             startDate: new Date()
         });
-    })
+
+        $('#booking_startDate, #booking_endDate').on('change', calculateAmount);
+
+    });
+
+            
+
+    function calculateAmount() {
+        const endDate = new Date($('#booking_endDate').val().replace(/(\d{2})\/(\d{2})\/(\d{4})/, '$3-$2-$1'));
+        const startDate = new Date($('#booking_startDate').val().replace(/(\d{2})\/(\d{2})\/(\d{4})/, '$3-$2-$1'));
+
+        if (startDate && endDate && (startDate < endDate)) {
+            const DayInMS = 24 * 60 * 60 * 1000
+
+            const interval = endDate.getTime() - startDate.getTime();
+            const days = interval / DayInMS;
+            const amount = days * {{ ad.price }};
+
+            $('#days').text(days);
+            $('#amount').text(amount.toLocaleString('fr-FR'));
+        }
+
+    }
 </script>
 
 {% endblock %}
