--- a/templates/partials/header.html.twig
+++ b/templates/partials/header.html.twig
@@ -25,6 +25,7 @@
                 <div class="dropdown-menu dropdown-menu-right" aria-labelledby="accountDropdownLink">
                     <a href="{{ path('account_index') }}" class="dropdown-item">Mon compte</a>
                     <a href="{{ path('ads_create') }}" class="dropdown-item">Ajoutez une annonce</a>
+                    <a href="{{ path('account_bookings') }}" class="dropdown-item">Mes réservations</a>
                     <div class="dropdown-divider"></div>
                     <a href="{{ path('account_profile') }}" class="dropdown-item">Modifiez profil</a>
                     <a href="{{ path('account_password') }}" class="dropdown-item">Modifiez mot de passe</a>
@@ -34,10 +35,10 @@
             </li>
         {% else %}
             <li class="nav-item">
-                <a class="nav-link" href="{{ path('account_register')}}">Enregistrement</a>
+                <a class="nav-link" href="{{ path('account_register') }}">Enregistrement</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="{{ path('account_login')}}">Connexion</a>
+                <a class="nav-link" href="{{ path('account_login') }}">Connexion</a>
             </li>
         {% endif %}
         </ul>
