--- a/public/css/app.css
+++ b/public/css/app.css
@@ -42,5 +42,9 @@ p {
 }
 
 .datepicker table tr td.disabled, .datepicker table tr td.disabled:hover {
-    color: crimson !important;
+    color: #dc143c !important;
+}
+
+.rating {
+    color: #e7e70c !important;
 }
