--- a/templates/ad/_ad.html.twig
+++ b/templates/ad/_ad.html.twig
@@ -3,11 +3,15 @@
         <div class="card bg-light mb-3">
             <div class="card-header text-center">
                 {{ ad.rooms }} chambre(s)<strong> {{ ad.price }} &euro; / nuit</strong><br>
+                {% if ad.comments | length > 0%}
+                    <small>{% include 'partials/rating.html.twig' with {'rating': ad.avgRating} %}</small>
+                {% else %}
                     <small>Pas encore noté</small>
+                {% endif %}
             </div>
             <a href="{{ url }}">
                 <img src="{{ ad.coverImage }}" alt="Image de l'appartement" 
-                    >
+                    style="height: 250px; width: 100%; display:block; object-fit: cover">
             </a>
             <div class="card-body">
                 <h4 class="card-title">
