--- a/templates/ad/show.html.twig
+++ b/templates/ad/show.html.twig
@@ -57,6 +57,43 @@
                     <span class="sr-only">Next</span>
                 </a>
             </div>
+            <hr>
+
+            {% if ad.comments|length > 0 %}
+                <h2>Commentaires de nos membres</h2>
+
+                <div class="alert alert-info">
+                    <h4 class="alert-heading text-center">
+                        <div class="row align-items-center">
+                            <div class="col">
+                                Note globale donnée par nos membres<br>
+                            </div>
+                            <div class="col">
+                                {% include 'partials/rating.html.twig' with {'rating': ad.avgRating} %}                                <br>
+                                <small>calculée sur {{ ad.comments | length }} avis</small>
+                            </div>
+                        </div>
+                    </h4>
+                </div>
+
+                {% for comment in ad.comments %}
+                <div class="bg-ligth rounded mb-3 py-3 px-3">
+                    <p><strong>{{ comment.author.fullName }}</strong> a écrit : </p>
+                    <blockquotes>
+                        {{ comment.content }}
+                    </blockquotes>
+                    <p><strong> Note de {{ comment.author.fullName }}</strong> :   
+                    {# {% set rating = comment.rating %} #}                 
+                    {% include 'partials/rating.html.twig' with {'rating': comment.rating} %}
+                    </p>
+                </div>
+                {% endfor %}
+            {% else %}
+                <div class="bg-ligth rounded mb-3 py-3 px-3">
+                    <h2>Cette annonce n'a pas encore reçu de commentaires</h2>
+                </div>
+            {% endif %}
+
         </div>
         <div class="col">
             {% set a = ad.author %}
