--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -2,9 +2,12 @@
 <html>
     <head>
         <meta charset="UTF-8">
-        <meta description="Site d'apprentissage de Symfony 4">
+        <meta name="description" content="Site d'apprentissage de Symfony 4 avec les vidéos de Lior Chamla via le site Udemy">
         <title>{% block title %}{% endblock %} M.A.M.</title>
         <link rel="stylesheet" href="/css/bootstrap.min.css">
+        <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" 
+            integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" 
+            crossorigin="anonymous">
         <link rel="stylesheet" href="/css/app.css">
         {% block stylesheets %}{% endblock %}
     </head>
