--- a/templates/ad/_collection.html.twig
+++ b/templates/ad/_collection.html.twig
@@ -6,7 +6,8 @@
     <input id="widgets-counter" type="hidden" value="0">
 
     <div class="form-group">
-        <button type="button" id="add-image" class="btn btn-warning">Ajoutez une photo</button>
+        <button type="button" id="add-image" class="btn btn-warning">
+        <i class="fas fa-plus"></i> Ajoutez une photo</button>
     </div>
 {% endblock %}
 
