--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -3,6 +3,9 @@
     <head>
         <meta charset="UTF-8">
         <meta name="description" content="Site d'apprentissage de Symfony 4 avec les vidéos de Lior Chamla via le site Udemy">
+        
+        <meta name="viewport" content="width=device-width, user-scalable=no">
+        
         <title>{% block title %}{% endblock %} M.A.M.</title>
         <link rel="stylesheet" href="/css/bootstrap.min.css">
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" 
