--- a/templates/account/bookings.html.twig
+++ b/templates/account/bookings.html.twig
@@ -5,7 +5,7 @@
 {% block body %}
 
 <div class="container"> 
-    <h1>Réservations de {{ app.user.fullName }}</h1>
+    <h1 class="my-5">Réservations de {{ app.user.fullName }}</h1>
     <div class="alert alert-info mt-3">
         <p>Liste de vos réservations</p>
     </div>
@@ -13,11 +13,24 @@
     {% for booking in app.user.bookings %}
 
         <div class="row mt-4">
-            <div class="col-4">
+            <div class="col-md-4">
                 <img src="{{ booking.ad.coverImage}}" alt="Phote de l'annonce {{ booking.ad.title }}" 
-                    style="height: 200px; width: 80%; display:block; object-fit: cover">
+                    style="height: 200px; width: 100%; display:block; object-fit: cover">
+
+                <div class="mt-3">
+                    {% set comment = booking.ad.CommentFromAuthor(app.user) %}
+                    {% if comment is not null %}
+                        <strong>Note : </strong>
+                        {% include 'partials/rating.html.twig' with {'rating': booking.ad.avgRating} %} 
+                    {% else %}
+
+                        <p>Vous n'avez pas encore noté votre séjour !</p>
+                        <a href="{{ path('booking_show', {'id': booking.id}) }}#comment" class="btn btn-warning">Je donne mon avis</a>
+
+                    {% endif %}
+                </div>
             </div>
-            <div class="col-8">
+            <div class="col-md-8">
                 <h4>{{ booking.ad.title }}</h4>
                 <p>
                     Réservation <strong>n° {{ booking.id }} </strong>
@@ -26,9 +39,9 @@
                     Du {{ booking.startDate | date('d/m/Y') }} au {{ booking.endDate | date('d/m/Y') }}
                 </p>
                 <p>
-                    D'un montant de {{ booking.amount }} &euro;
+                    D'un montant de {{ booking.amount | number_format(2, ',', ' ')}} &euro;
                 </p>
-                <a href="{{ path('booking_show', {'id': booking.id}) }}" class="btn btn-warning">Détails</a>
+                <a href="{{ path('booking_show', {'id': booking.id}) }}" class="btn btn-warning float-right">Détails</a>
             </div>
         </div>
 
