--- a/templates/account/login.html.twig
+++ b/templates/account/login.html.twig
@@ -5,11 +5,14 @@
 {% block body %}
 
 <div class="container"> 
+    <h1 class="my-5 text-center">Connectez vous</h1>
     <div class="row">
-        <div class="col-md-3">&nbsp;</div>
+        <div class="col-md-3">&nbsp;
+        </div>
         <div class="col-md-6">
-            <div class="bg-light py-3 px-3">
-                <h1>Connectez vous ici</h1>
+            
+            <div class="bg-light py-3 px-3 clearfix">
+                
 
                 {% if hasError %}
                     <div class="alert alert-dismissible alert-danger">Erreur de login, identifiant ou mot de passe éronné !
@@ -29,7 +32,7 @@
                         <input type="password" name="_password" id="password" class="form-control" placeholder="Mot de passe..." required>
                     </div>
                     <div class="form-group">
-                        <button type="submit" class="btn btn-warning">Connexion</button>
+                        <button type="submit" class="btn btn-warning float-right"><i class="fas fa-check"></i> Connexion</button>
                     </div>
                 </form>
             </div>
