--- a/templates/account/password.html.twig
+++ b/templates/account/password.html.twig
@@ -3,11 +3,18 @@
 {% block title %}Modifiez votre mot de passe{% endblock %}
 
 {% block body %}
-    <div class="container"> 
-        <h1>Modifiez votre mot de passe</h1>
-        {{ form_start(form) }}
-            {{ form_widget(form) }}
-            <button type="submit" class="btn btn-warning">Validez</button>
-        {{ form_end(form) }}
+    <div class="container clearfix"> 
+        <h1 class="my-5 text-center">Modifiez votre mot de passe</h1>
+        <div class="row">
+            <div class="col-md-3">&nbsp;
+            </div>
+            <div class="col-md-6">
+            
+            {{ form_start(form) }}
+                {{ form_widget(form) }}
+                <button type="submit" class="btn btn-warning float-right">Validez</button>
+            {{ form_end(form) }}
+            </div>
+        </div>
     </div>
 {% endblock %}
