--- a/templates/account/registration.html.twig
+++ b/templates/account/registration.html.twig
@@ -5,10 +5,35 @@
 {% block body %}
 
 <div class="container">
-    <h1>Inscrivez vous sur notre site</h1>
+    <h1 class="my-5">Inscrivez vous</h1>
     {{ form_start(form) }}
-        {{ form_widget(form) }}
-        <button type="submit" class="btn btn-warning">Validez</button>
+    <div class="row">
+        <div class="col">
+            <div class="alert alert-light">
+                <h2 class="alert-heading">Informations Générales</h2>
+                <hr>
+                {{ form_row(form.firstName) }}
+                {{ form_row(form.lastName) }}
+                {{ form_row(form.email) }}
+                {{ form_row(form.picture) }}
+                <hr>
+                <h2 class="alert-heading">Mots de passe</h2>
+                <hr>
+                {{ form_row(form.hash) }}
+                {{ form_row(form.passwordConfirm) }}
+            </div>
+        </div>
+        <div class="col">
+            <div class="alert alert-light clearfix">
+            <h2 class="alert-heading">Détails</h2>
+                <hr>
+                {{ form_row(form.introduction) }}
+                {{ form_row(form.description) }}
+                <hr>
+                <button type="submit" class="btn btn-warning float-right"><i class="fas fa-check"></i> Validez</button>
+            </div>
+        </div>
+    </div>
     {{ form_end(form) }}
 </div>
 
