--- a/templates/ad/index.html.twig
+++ b/templates/ad/index.html.twig
@@ -4,7 +4,7 @@
 
 {% block body %}
 <div class="container">
-    <h1 class="mt-3 mb-4">Nos annonces de locations chez nos membres</h1>
+    <h1 class="my-5">Nos annonces de locations chez nos membres</h1>
     <div class="row">
         {% for ad in ads %}
             {% include 'ad/_ad.html.twig' %}
