--- a/templates/booking/book.html.twig
+++ b/templates/booking/book.html.twig
@@ -8,13 +8,13 @@
 
 {% block body %}
 <div class="container">
-    <h1>Réservez l'annonce : {{ ad.title }}</h1>
+    <h1 class="my-3">Réservez l'annonce : <em>{{ ad.title }}</em></h1>
         <p>Vous allez réservez le bien de <strong>{{ ad.author.fullName }}</strong></p>
 
         {{ form_start(form) }}
 
         <div class="alert alert-light">
-            <h2>Indiquez vos dates de séjour ci dessous</h2>
+            <h4 class="mt-4">Indiquez vos dates de séjour ci dessous</h4>
             <div class="row">
                 <div class="col">
 
@@ -27,9 +27,9 @@
 
                 </div>
             </div>
-            <h4>Montant du séjour : <span id="amount">...</span> &euro;</h4>
-            <p><span id="days">0</span> nuit(s) à {{ ad.price }} &euro; / nuit</p>
-            <h class="mt-4">Ajoutez un commentaire (optionnel)</h4>
+            <h4 class="mt-4">Montant du séjour : <span id="amount">...</span> &euro;</h4>
+            <p><span id="days">0</span> nuit(s) à {{ ad.price | number_format(2, ',', ' ') }} &euro; par nuit</p>
+            <h4 class="mt-4">Ajoutez un commentaire (optionnel)</h4>
 
             {{ form_row(form.comment) }}
 
@@ -86,6 +86,7 @@
 
             const interval = endDate.getTime() - startDate.getTime();
             const days = interval / DayInMS;
+            // const amount = days * {{ ad.price|number_format(2, ',', ' ') }};
             const amount = days * {{ ad.price }};
 
             $('#days').text(days);
