--- a/templates/account/bookings.html.twig
+++ b/templates/account/bookings.html.twig
@@ -25,7 +25,7 @@
                     {% else %}
 
                         <p>Vous n'avez pas encore noté votre séjour !</p>
-                        <a href="{{ path('booking_show', {'id': booking.id}) }}#comment" class="btn btn-warning">Je donne mon avis</a>
+                        <a href="{{ path('booking_show', {'id': booking.id}) }}#comment" class="btn mb-3 btn-warning">Je donne mon avis</a>
 
                     {% endif %}
                 </div>
