--- a/templates/account/password.html.twig
+++ b/templates/account/password.html.twig
@@ -8,7 +8,7 @@
         <div class="row">
             <div class="col-md-3">&nbsp;
             </div>
-            <div class="col-md-6">
+            <div class="col-md-6 alert alert-light">
             
             {{ form_start(form) }}
                 {{ form_widget(form) }}
