--- a/templates/account/registration.html.twig
+++ b/templates/account/registration.html.twig
@@ -17,7 +17,7 @@
                 {{ form_row(form.email) }}
                 {{ form_row(form.picture) }}
                 <hr>
-                <h2 class="alert-heading">Mots de passe</h2>
+                <h2 class="alert-heading">Mot de passe</h2>
                 <hr>
                 {{ form_row(form.hash) }}
                 {{ form_row(form.passwordConfirm) }}
@@ -25,7 +25,7 @@
         </div>
         <div class="col">
             <div class="alert alert-light clearfix">
-            <h2 class="alert-heading">Détails</h2>
+            <h2 class="alert-heading">Détails du profil</h2>
                 <hr>
                 {{ form_row(form.introduction) }}
                 {{ form_row(form.description) }}
