--- a/templates/ad/index.html.twig
+++ b/templates/ad/index.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Nos annonces de la {% endblock %}
+{% block title %}Les annonces sur {% endblock %}
 
 {% block body %}
 <div class="container">
