--- a/templates/admin/base.html.twig
+++ b/templates/admin/base.html.twig
@@ -18,11 +18,11 @@
     <body>
         {% block header %}{% endblock %}
 
-        {% include 'partials/header.html.twig' %}
+        {% include 'admin/partials/header.html.twig' %}
 
         {% block body %}{% endblock %}
 
-        {% include 'partials/footer.html.twig' %}
+        {% include 'admin/partials/footer.html.twig' %}
                 <script src="/js/jquery.min.js">
                 </script>
                 <script src="/js/popper.min.js">
