--- a/templates/account/profile.html.twig
+++ b/templates/account/profile.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Modifier le profil {% endblock %}
+{% block title %}Modifier votre profil {% endblock %}
 
 {% block body %}
     <div class="container">
