--- a/templates/admin/ad/index.html.twig
+++ b/templates/admin/ad/index.html.twig
@@ -1,6 +1,6 @@
-{% extends 'base.html.twig' %}
+{% extends 'admin/base.html.twig' %}
 
-{% block title %}Administration des annonces{% endblock %}
+{% block title %}Administration de {% endblock %}
 
 {% block body %}
     <div class="container-fluid">
