--- a/templates/admin/partials/header.html.twig
+++ b/templates/admin/partials/header.html.twig
@@ -1,5 +1,5 @@
-<nav class="navbar navbar-expand-lg navbar bg-light">
-    <a class="navbar-brand" href="{{ path('homepage') }}">M.A.M.</a>
+<nav class="navbar navbar-expand-lg navbar-dark bg-secondary">
+    <a class="navbar-brand" href="{{ path('homepage') }}">H B & B</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" 
             data-target="#navbarColor03" aria-controls="navbarColor03" 
             aria-expanded="false" aria-label="Toggle navigation">
@@ -9,13 +9,40 @@
     <div class="collapse navbar-collapse" id="navbarColor03">
         <ul class="navbar-nav mr-auto">
             <li class="nav-item">
-                <a class="nav-link" href="{{ path('homepage') }}">Accueil</a>
+                <a class="nav-link" href="#">
+                    <i class="fas fa-chart-line"></i>
+                    Dash Board
+                </a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="{{ path('ads_index') }}">Les annonces</a>
+                <a class="nav-link" href="{{ path('admin_ads_index') }}">
+                    <i class="fas fa-hotel"></i>
+                    Les annonces
+                </a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#">
+                    <i class="fas fa-folder"></i>
+                    Réservations
+                </a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#">
+                    <i class="fas fa-comments"></i>
+                    Commentaires
+                </a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#">
+                    <i class="fas fa-users"></i>
+                    Utilisateurs
+                </a>
             </li>
         </ul>
         <ul class="navbar-nav ml-auto">
+            <li class="nav-item">
+                <a class="nav-link" href="{{ path('homepage') }}">Accueil</a>
+            </li>
         {% if app.user %}
             <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" id="accountDropdownLink" data-toggle="dropdown">
@@ -23,10 +50,6 @@
                     {{ app.user.fullName }}
                 </a>
                 <div class="dropdown-menu dropdown-menu-right" aria-labelledby="accountDropdownLink">
-                    <a href="{{ path('ads_create') }}" class="dropdown-item">Ajoutez une annonce</a>
-                    <div class="dropdown-divider"></div>
-                    <a href="{{ path('account_bookings') }}" class="dropdown-item">Mes réservations</a>
-                    <div class="dropdown-divider"></div>
                     <a href="{{ path('account_index') }}" class="dropdown-item">Mon compte</a>
                     <div class="dropdown-divider"></div>
                     <a href="{{ path('account_profile') }}" class="dropdown-item">Modifiez profil</a>
@@ -34,13 +57,6 @@
                     <div class="dropdown-divider"></div>
                     <a href="{{ path('account_logout') }}" class="dropdown-item">Déconnexion</a>
                 </div>
-            </li>
-        {% else %}
-            <li class="nav-item">
-                <a class="nav-link" href="{{ path('account_register') }}">Enregistrement</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="{{ path('account_login') }}">Connexion</a>
             </li>
         {% endif %}
         </ul>
