--- a/templates/home.html.twig
+++ b/templates/home.html.twig
@@ -1,7 +1,7 @@
 {% extends 'base.html.twig' %}
 
 {% block title %}
-    Bienvenue à la 
+    Bienvenue sur 
 {% endblock %}
 
 {% block header %}
@@ -11,12 +11,12 @@
 {% block body %}
 <div class="container">
     <div class="jumbotron mt-4 bg-light text-center">
-        <h1 class="display-3">Bienvenue à la M.A.M. du Tremblay sur Mauldre</h1>
-        <p class="lead text-warning">Nous gardons vos enfants de 0 à 3ans du lundi au vendredi</p>
+        <h1 class="display-3">Bienvenue sur Air Be and Be</h1>
+        <p class="lead text-warning">Comme à la maison chez les autres</p>
         <hr class="my-4">
-        <p class="text-primary">Où et à qui confier son enfant en bas âge quand les parents travaillent ?</p>
+        <p class="text-primary">Appartements, maisons à louer entre particuliers</p>
         <p class="lead">
-            <a class="btn btn-primary btn-lg" href="#" role="button">Plus d'info</a>
+            <a class="btn btn-primary btn-lg" href="#" role="button">Plus d'informations ?!</a>
         </p>
     </div>
 
