--- a/templates/admin/partials/header.html.twig
+++ b/templates/admin/partials/header.html.twig
@@ -41,7 +41,10 @@
         </ul>
         <ul class="navbar-nav ml-auto">
             <li class="nav-item">
-                <a class="nav-link" href="{{ path('homepage') }}">Accueil</a>
+                <a class="nav-link" href="{{ path('homepage') }}">
+                    <i class="fas fa-eye"></i>
+                    Accueil
+                </a>
             </li>
         {% if app.user %}
             <li class="nav-item dropdown">
@@ -55,7 +58,7 @@
                     <a href="{{ path('account_profile') }}" class="dropdown-item">Modifiez profil</a>
                     <a href="{{ path('account_password') }}" class="dropdown-item">Modifiez mot de passe</a>
                     <div class="dropdown-divider"></div>
-                    <a href="{{ path('account_logout') }}" class="dropdown-item">Déconnexion</a>
+                    <a href="{{ path('admin_account_logout') }}" class="dropdown-item">Déconnexion</a>
                 </div>
             </li>
         {% endif %}
