--- a/templates/admin/booking/index.html.twig
+++ b/templates/admin/booking/index.html.twig
@@ -3,6 +3,7 @@
 {% block title %}Réservations de {% endblock %}
 
 {% block body %}
+{% dump(bookings) %}
     <div class="container-fluid table-responsive">
         <h1 class="my-5"> Gestion des réservations</h1>
         <table class="table table-hover table-striped">
@@ -23,14 +24,14 @@
             <tbody>
                 {% for booking in bookings %}
                 <tr>
-                    <td class="text-center">{{ booking.id }}</td>
+                    <td class="text-center font-weight-bold">{{ booking.id }}</td>
                     <td class="text-center">{{ booking.createdAt | date('d/m/Y') }}</td>
-                    <td>
+                    <td class="text-nowrap text-uppercase ">
                         <img src="{{ booking.booker.picture }}" alt="Avatar de {{ booking.booker.fullname }}" class="avatar avatar-mini mr-2">
                         {{ booking.booker.fullname }}
                     </td>
-                    <td>{{ booking.ad.title }}</td>
-                    <td>
+                    <td class="small">{{ booking.ad.title }}</td>
+                    <td class="text-uppercase">
                         <img src="{{ booking.ad.author.picture }}" alt="Avatar de {{ booking.ad.author.fullname }}" class="avatar avatar-mini mr-2">
                         {{ booking.ad.author.fullname }}
                     </td>
@@ -38,9 +39,9 @@
                     <td class="text-center">{{ booking.endDate | date('d/m/Y') }}</td>
                     <td class="text-center">
                         <span class="badge badge-light rounded">{{ booking.amount | number_format(2, ',', ' ') }}</span>
-                    <td>{{ booking.comment | slice(1, 30)}} ....</td>
+                    <td class="small">{{ booking.comment | slice(1, 30)}} ....</td>
                     <td class="text-center">
-                        <a href="{#{ path('admin_ads_edit', {'id': ad.id}) }#}" class="btn btn-light"><i class="fas fa-eye"></i></a>
+                        <a href="{{ path('admin_bookings_show', {'id': booking.id}) }}" class="btn btn-light"><i class="fas fa-eye"></i></a>
                         <a href="{#{ path('admin_ads_edit', {'id': ad.id}) }#}" class="btn btn-secondary"><i class="fas fa-edit"></i></a>
                         <a href="{#{ path('admin_ads_delete', {'id': ad.id}) }#}" class="btn btn-danger"><i class="fas fa-trash"></i></a>
                     </td>
