edit booking ajouté

--- a/templates/account/login.html.twig
+++ b/templates/account/login.html.twig
@@ -38,6 +38,18 @@
             </div>
         </div>
     </div>
+    <div class="row">
+        <div class="col-md-3">&nbsp;
+        </div>
+        <div class="col-md-6">
+            <div class="clearfix my-5 text-center align-items-center">
+                <p>
+                    <a href="{{ path('account_register') }}" class="btn btn-warning">Ou incrivez vous ici</a>
+                </p>
+            </div>
+        </div>
+    </div>
+    
 </div>
 
 {% endblock %}
