--- a/templates/admin/booking/index.html.twig
+++ b/templates/admin/booking/index.html.twig
@@ -3,7 +3,7 @@
 {% block title %}Réservations de {% endblock %}
 
 {% block body %}
-{% dump(bookings) %}
+
     <div class="container-fluid table-responsive">
         <h1 class="my-5"> Gestion des réservations</h1>
         <table class="table table-hover table-striped">
@@ -23,15 +23,17 @@
             </thead>
             <tbody>
                 {% for booking in bookings %}
+
+
                 <tr>
                     <td class="text-center font-weight-bold">{{ booking.id }}</td>
                     <td class="text-center">{{ booking.createdAt | date('d/m/Y') }}</td>
-                    <td class="text-nowrap text-uppercase ">
+                    <td class="text-nowrap text-uppercase small">
                         <img src="{{ booking.booker.picture }}" alt="Avatar de {{ booking.booker.fullname }}" class="avatar avatar-mini mr-2">
                         {{ booking.booker.fullname }}
                     </td>
                     <td class="small">{{ booking.ad.title }}</td>
-                    <td class="text-uppercase">
+                    <td class="text-nowrap text-uppercase small">
                         <img src="{{ booking.ad.author.picture }}" alt="Avatar de {{ booking.ad.author.fullname }}" class="avatar avatar-mini mr-2">
                         {{ booking.ad.author.fullname }}
                     </td>
@@ -42,10 +44,11 @@
                     <td class="small">{{ booking.comment | slice(1, 30)}} ....</td>
                     <td class="text-center">
                         <a href="{{ path('admin_bookings_show', {'id': booking.id}) }}" class="btn btn-light"><i class="fas fa-eye"></i></a>
-                        <a href="{#{ path('admin_ads_edit', {'id': ad.id}) }#}" class="btn btn-secondary"><i class="fas fa-edit"></i></a>
-                        <a href="{#{ path('admin_ads_delete', {'id': ad.id}) }#}" class="btn btn-danger"><i class="fas fa-trash"></i></a>
+                        <a href="{{ path('admin_bookings_edit', {'id': booking.id}) }}" class="btn btn-secondary"><i class="fas fa-edit"></i></a>
+                        <a href="{{ path('admin_bookings_delete', {'id': booking.id}) }}" class="btn btn-danger"><i class="fas fa-trash"></i></a>
                     </td>
                 </tr>
+
                 {% endfor %}
             </tbody>
         </table>
