--- a/templates/admin/booking/edit.html.twig
+++ b/templates/admin/booking/edit.html.twig
@@ -14,29 +14,32 @@
 
         <hr>
         <div class="alert alert-light">
-            <h4 class="mt-4">Modifiez les dates de séjour ci dessous</h4>
+
+        {{ form_start(form) }}
+
             <div class="row">
                 <div class="col">
 
                     {{ form_row(form.startDate) }}
+                    {{ form_row(form.endDate) }}
+                    {{ form_row(form.comment) }}
 
                 </div>
                 <div class="col">
+                    {{ form_row(form.booker) }}
+                    {{ form_row(form.ad) }}
+                    
+                    <h4 class="mt-4">Montant du séjour : <span id="amount">...</span> &euro;</h4>
+                    <p><span id="days">0</span> nuit(s) à {{ booking.ad.price | number_format(2, ',', ' ') }} &euro; par nuit</p>
 
-                    {{ form_row(form.endDate) }}
+
+                    <button type="submit" class="btn btn-warning float-right">Validez</button>
 
                 </div>
             </div>
-            <h4 class="mt-4">Montant du séjour : <span id="amount">...</span> &euro;</h4>
-            <p><span id="days">0</span> nuit(s) à {{ booking.ad.price | number_format(2, ',', ' ') }} &euro; par nuit</p>
-            <h4 class="mt-4">Modifiez/Ajoutez un commentaire (optionnel)</h4>
-
-            {{ form_row(form.comment) }}
 
         </div>
-
-        <button type="submit" class="btn btn-warning">Validez</button>
-        
+      
         {{ form_end(form) }}
 
     </div>
