--- a/templates/admin/booking/index.html.twig
+++ b/templates/admin/booking/index.html.twig
@@ -11,7 +11,7 @@
                 <tr>
                     <th class="text-center">Id</th>
                     <th class="text-center">Date d'enregistrement</th>
-                    <th>Voyageur</th>
+                    <th>Visiteur</th>
                     <th>Annonce</th>
                     <th>Propriétaire</th>
                     <th class="text-center">Date d'arrivée</th>
@@ -24,10 +24,9 @@
             <tbody>
                 {% for booking in bookings %}
 
-
                 <tr>
                     <td class="text-center font-weight-bold">{{ booking.id }}</td>
-                    <td class="text-center">{{ booking.createdAt | date('d/m/Y') }}</td>
+                    <td class="text-center">{{ booking.createdAt | date('d/m/Y H:i') }}</td>
                     <td class="text-nowrap text-uppercase small">
                         <img src="{{ booking.booker.picture }}" alt="Avatar de {{ booking.booker.fullname }}" class="avatar avatar-mini mr-2">
                         {{ booking.booker.fullname }}
